compiler-project/tests/lexer/valid/test_math_expressions.src
fn main() {
    int a = 1 + 2 - 3 * 4 / 5 % 6;
    float b = 3.14 * 2.0 / 1.5 + 0.5;
    int c = (1 + 2) * (3 - 4) / (5 % 3);
    return a;
}